--- a/week-1/4-links-scripts/index.html
+++ b/week-1/4-links-scripts/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>4. Adding Links and Scripts - HTML, CSS and Git Exercises</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/css/missing-styles.css" />
+    <link rel="stylesheet" href="/week-1/4-links-scripts/css/missing-styles.css" />
   </head>
 
   <body>
