--- a/week-3/19-search/index.html
+++ b/week-3/19-search/index.html
@@ -11,7 +11,9 @@
   <body>
     <div class="site-wrapper">
       <main>
-        <p>Delete this line and add your form.</p>
+        <form method="GET" action="https://www.google.com/search">
+          <input type="text" name="q" placeholder="try out some google search" />
+        </form>
       </main>
     </div>
   </body>
