--- a/week-3/24-dietary/index.html
+++ b/week-3/24-dietary/index.html
@@ -20,6 +20,44 @@
 
         <form>
           <!-- Your multiple choice goes here -->
+          <fieldset>
+            <legend>Please select all of your dietary requirements</legend>
+            <!-- <label for="halal-input">Halal</label>
+            <input type="checkbox" name="halal" id="halal-input" />
+            <label for="kosher-input">Kosher</label>
+            <input type="checkbox" name="kosher" id="kosher-input" />
+            <label for="veg-input">Vegetarian</label>
+            <input type="checkbox" name="vegetarian" id="veg-input" />
+            <label for="vegan-input">Vegan</label>
+            <input type="checkbox" name="vegan" id="vegan-input" />
+            <label for="gf-input">Gluten Free</label>
+            <input type="checkbox" name="gluten-free" id="gf-input" /> -->
+            <label>
+              <input type="checkbox" name="halal" />
+              Halal
+            </label>
+            <br />
+            <label>
+              <input type="checkbox" name="kosher" />
+              Kosher
+            </label>
+            <br />
+            <label>
+              <input type="checkbox" name="vegetarian" />
+              Vegetarian
+            </label>
+            <br />
+            <label>
+              <input type="checkbox" name="vegan" />
+              Vegan
+            </label>
+            <br />
+            <label>
+              <input type="checkbox" name="gluten-free" />
+              Gluten Free
+            </label>
+          </fieldset>
+
           <button type="submit">Submit</button>
         </form>
       </main>
