--- a/week-3/23-comments/index.html
+++ b/week-3/23-comments/index.html
@@ -32,12 +32,16 @@
           <p>Add your comments and let us know what you think!</p>
 
           <!-- Your comment form goes here -->
-          <form method="GET">
-            <label for="comment"><span style="font-weight: bold;">Add Your Message</span></label>
-            <!-- <strong></strong> -->
-            <textarea name="comment" id="user_message"></textarea>
-            <button type="submit">Send Comment</button>
-          </form>
+          <div>
+            <form method="GET">
+              <label for="user_message"
+                ><span style="font-weight: bold;">Add Your Message</span>
+              </label>
+              <!-- <strong></strong> -->
+              <textarea name="comment" id="user_message"></textarea>
+              <button type="submit">Send Comment</button>
+            </form>
+          </div>
         </div>
       </main>
     </div>
