Completed 25-shirt-size

--- a/week-3/25-shirt-size/index.html
+++ b/week-3/25-shirt-size/index.html
@@ -35,7 +35,7 @@
                     <label for="sizes-select" class="screenreader">Choose a size</label>
                     <select name="sizes" id="sizes-select">
                       <option value="small">Small</option>
-                      <option class="selected" value="medium">Medium</option>
+                      <option selected value="medium">Medium</option>
                       <option value="large">Large</option>
                     </select>
                   </form>
