--- a/week-3/29-combined-skills/contact.html
+++ b/week-3/29-combined-skills/contact.html
@@ -12,57 +12,91 @@
 
   <body>
     <div class="site-wrapper">
-      <div class="site-header">
-        <div class="site-header__title">C.Y.F</div>
-        <div class="main-nav">
-          <ul class="main-nav__list">
-            <li class="main-nav__list-item">
-              <a href="index.html">Latest</a>
-            </li>
-            <li class="main-nav__list-item">
-              <a href="about.html">About</a>
-            </li>
-            <li class="main-nav__list-item">
-              <a href="contact.html">Contact</a>
-            </li>
-          </ul>
+      <header>
+        <div class="site-header">
+          <h1 class="site-header__title">C.Y.F</h1>
+          <nav>
+            <div class="main-nav">
+              <ul class="main-nav__list">
+                <li class="main-nav__list-item">
+                  <a href="index.html">Latest</a>
+                </li>
+                <li class="main-nav__list-item">
+                  <a href="about.html">About</a>
+                </li>
+                <li class="main-nav__list-item">
+                  <a href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <form class="site-search" action="/search">
+            <label for="search-input">
+              Search
+            </label>
+            <input id="search-input" class="site-search__input" type="text" name="search" />
+            <svg
+              aria-hidden="true"
+              data-prefix="fas"
+              data-icon="search"
+              class="svg-inline--fa fa-search fa-w-16"
+              role="img"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <path
+                fill="currentColor"
+                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
+              ></path>
+            </svg>
+            <button type="submit">Submit</button>
+          </form>
         </div>
-        <form class="site-search" action="/search">
-          <label for="search-input">
-            Search
-          </label>
-          <input id="search-input" class="site-search__input" type="text" name="search" />
-          <svg
-            aria-hidden="true"
-            data-prefix="fas"
-            data-icon="search"
-            class="svg-inline--fa fa-search fa-w-16"
-            role="img"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512"
-          >
-            <path
-              fill="currentColor"
-              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
-            ></path>
-          </svg>
-          <button type="submit">Submit</button>
-        </form>
-      </div>
+      </header>
 
       <main>
         <h1>Contact Us</h1>
         <p>Send us an email if you would like to contact us.</p>
         <form method="GET" class="contact-form">
           <div class="contact-form__field">
-            <label for="name">Name</label>
-            <input type="text" name="name" id="name" />
+            <label for="name">Name*</label>
+            <input required type="text" name="name" id="name" />
           </div>
           <div class="contact-form__field">
+            <label for="email">Email*</label>
+            <input required type="email" name="email" id="email" />
+          </div>
+          <div class="contact-form__field">
+            <label for="mes-input">Message*</label>
             <textarea
+              required
               name="message"
               placeholder="Your message should not be longer than 200 words."
+              id="mes-input"
             ></textarea>
+          </div>
+          <div class="contact-form__field">
+            <fieldset>
+              <legend>What branch are you interested in?</legend>
+              <div>
+                <label for="lon">
+                  <input type="radio" name="branch" id="lon" value="London" />
+                  London </label
+                ><br /><br />
+              </div>
+              <div>
+                <label for="gla">
+                  <input type="radio" name="branch" id="gla" value="Glasgow" />
+                  Glasgow </label
+                ><br /><br />
+              </div>
+              <div>
+                <label for="man">
+                  <input type="radio" name="branch" id="man" value="Manchester" />
+                  Manchester
+                </label>
+              </div>
+            </fieldset>
           </div>
           <button type="submit">Send</button>
         </form>
@@ -71,7 +105,8 @@
       <footer>
         <p>
           <a href="https://github.com/CodeYourFuture/html-css-git-exercises">Built</a>
-          with ♥ for <a href="https://codeyourfuture.io/">CodeYourFuture</a>.
+          with <span class="love-color">♥</span> for
+          <a href="https://codeyourfuture.io/">CodeYourFuture</a>.
         </p>
         <p>
           <svg
